--- a/EscalArt/templates/escalArt/Perfil_Artista.html
+++ b/EscalArt/templates/escalArt/Perfil_Artista.html
@@ -120,7 +120,7 @@
                     <ul class="Configuracion-settings">
                         <li>
                             <i class="fa-solid fa-bookmark"></i><a href="{% url 'perfil_cliente' user.username %}">Perfil</a></li>
-                        <li><i class="fa-solid fa-gear"></i><a href="#">Configuracion</a></li>
+                        <li><i class="fa-solid fa-gear"></i><a href="{% url 'configuracion' %}">Configuracion</a></li>
                         <span class="linea_2"></span>
                     </ul>
                 </div>
