--- a/EscalArt/templates/registration/login.html
+++ b/EscalArt/templates/registration/login.html
@@ -45,7 +45,7 @@
                 {% csrf_token %} {{ form | crispy}}
                 <input class="check" type="checkbox" id="checkid">
                 <label for="checkid">Recuerdame</label>
-                <a href="#">¿Olvidaste tu contraseña?</a>
+                <a href="{% url 'reset_password' %}">¿Olvidaste tu contraseña?</a>
 
 
                 <input class="boton-form" type="submit" value="Iniciar Sesion">
