--- a/EscalArt/static/escalArt/css/Perfil.css
+++ b/EscalArt/static/escalArt/css/Perfil.css
@@ -4,6 +4,62 @@ body {
     background-color: #D9DBD2;
 }
 
+
+/* #settings-artista {
+    display: none;
+} */
+
+.column {
+    float: left;
+}
+
+#settings-artista {
+    position: absolute;
+    width: 210px;
+    height: 216px;
+    background-color: rgba(255, 255, 255, 0.779);
+    z-index: 40;
+    display: none;
+    border-radius: 20px;
+    right: 125px;
+    box-shadow: 2px solid #000;
+    border: 1px solid #86C332;
+}
+
+.guardados {
+    left: 0;
+}
+
+.Configuracion-settings {
+    margin: 10px;
+    list-style: none;
+}
+
+#settings-artista .Configuracion-settings li i {
+    font-size: 45px;
+    padding: 10px;
+}
+
+#settings-artista .Configuracion-settings li a {
+    text-decoration: none;
+}
+
+#settings-artista .Configuracion-settings span {
+    height: 2px;
+    width: 100%;
+    color: #659523;
+}
+
+.settings-container {
+    position: absolute;
+    margin-left: 445px;
+    top: 35px
+}
+
+.settings {
+    font-size: 25px;
+}
+
 .lista-info {
     list-style: none;
     margin: 0;
@@ -35,9 +91,10 @@ body {
     align-items: center;
 }
 
-.seccion-perfil-usuario {
+
+/* .seccion-perfil-usuario {
     margin-top: -100px;
-}
+} */
 
 .seccion-perfil-usuario .perfil-usuario-header {
     width: 100%;
@@ -102,6 +159,10 @@ body {
     bottom: -40px;
     left: calc(50% - 90px);
     z-index: 1;
+}
+
+.perfil-usuario-avatar {
+    z-index: 0;
 }
 
 .seccion-perfil-usuario .perfil-usuario-avatar img {
@@ -402,11 +463,11 @@ body {
 .publicacion-fondo {
     border-radius: 15px;
     background-color: #fff;
-    height: 550px;
-    width: 500px;
+    height: 80%;
+    width: 35%;
     position: fixed;
     z-index: 10;
-    bottom: 25%;
+    bottom: 10%;
     border: 1px #12130F solid;
 }
 
@@ -417,7 +478,6 @@ body {
     height: auto;
     background-color: rgba(0, 0, 0, 0.0);
     padding: 4;
-    margin: 20px 0px 20px 0px;
     background: #000;
 }
 
@@ -439,17 +499,6 @@ body {
     padding: 3px 7px;
 }
 
-
-/* ----Centro --*/
-
-.publicacion-centro {
-    position: relative;
-}
-
-.publi-centro-text {
-    position: relative;
-}
-
 .publicacion-centro img {
     width: 130px;
     height: 130px;
@@ -459,29 +508,21 @@ body {
     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
     bottom: -40px;
     margin: 10px 10px 10px 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
 
-.publicacion-centro #id_titulo {
-    position: absolute;
+.publicacion-centro input {
     padding: 5px 10px;
-    color: #000;
-    border-radius: 20px;
-    margin: 15px;
-    right: 115px;
+    position: absolute;
+    margin: 15px 0px 5px 0px;
+    width: 50%;
+    border-radius: 10px;
 }
 
-.publicacion-centro #id_descripcion {
-    max-width: 300px;
-    max-height: 100px;
-    position: absolute;
+.publicacion-centro textarea {
     padding: 5px 10px;
-    color: #000;
-    border-radius: 20px;
-    margin: 60px 30px 15px 15px;
-    right: 0;
+    position: relative;
+    width: 60%;
+    border-radius: 10px;
 }
 
 .publicacion-centro i {
@@ -493,21 +534,10 @@ body {
     padding: 10px 0 0 0;
 }
 
-
-/*---Bottom--*/
-
-.publicacion-centro #id_imagen {
-    position: absolute;
-    justify-content: center;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-}
-
-.publicacion-bottom img {
+.publicacion-bottom button img {
     width: 100%;
-    height: 100%;
-    padding: 15px 40px;
+    height: auto;
+    padding: 20px 40px;
     border-radius: 20px;
 }
 
@@ -532,8 +562,21 @@ body {
     justify-content: center;
     position: absolute;
     bottom: 0;
-    left: 20%;
+    left: 30%;
     margin-bottom: 15px;
+    align-items: center;
+}
+
+.publicacion-bottom_2 input {
+    width: 100px;
+    font-size: 15px;
+    padding: 5px 10px;
+    background-color: #86C332;
+    border: none;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    margin: 0 15px;
 }
 
 @media (max-width:800px) {
@@ -570,6 +613,7 @@ body {
     height: 100%;
     border: #000 1px solid;
     position: relative;
+    background-color: white;
 }
 
 .ver-publi_1 img {
@@ -651,18 +695,21 @@ body {
 /*------Ver Comentarios Publi*/
 
 .ver-boxcontainer {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
     padding: 5px 0px;
+    background-color: white;
 }
 
 .ver-testimonials-box {
     padding: 15px;
     margin: 1.5px;
+    height: 115px;
     cursor: pointer;
+    border-bottom: 1px solid #86C332;
 }
 
 .ver-profile-img {
@@ -780,7 +827,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     position: relative;
-    border: 1px #000 solid;
+    border-top: 1px #000 solid;
     text-align: center;
     justify-content: center;
     bottom: 0;
@@ -854,6 +901,7 @@ body {
         padding: 0;
         margin: 0;
         object-fit: cover;
+        background-color: white;
     }
     .ver-publi_1 {
         width: 100%;
@@ -1036,7 +1084,7 @@ body {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .calificacion-interno {
@@ -1070,6 +1118,7 @@ body {
     background-color: #f3f3f3;
     justify-content: center;
     width: 35%;
+    height: 100%;
 }
 
 #testimonials {
@@ -1185,6 +1234,7 @@ body {
     justify-content: center;
     background-color: #12130F;
     overflow: hidden;
+    height: 20%;
 }
 
 .Comentar-calificacion {
@@ -1337,37 +1387,92 @@ body {
     }
 }
 
-#id_descripcion {
-    padding: 5px 10px;
-    position: relative;
-    width: 60%;
-    border-radius: 10px;
+
+/* Isa */
+
+
+/* .scrol {
+    height: 100px;
+} */
+
+.scroll-div {
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 455px;
 }
 
-form>a {
+#id_comentario {
+    margin-top: 10px;
+}
+
+.d-none {
     display: none;
 }
 
-#AlertaOk2,
-#AlertaOk {
-    width: 25%;
-    height: 50px;
-    background-color: white;
+.child-comment {
+    margin-left: 2rem;
+    padding-right: 50px;
+}
+
+.contenedor-reviews {
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 60%;
+}
+
+
+/* Hide Radio button */
+
+.rate>input {
+    display: none;
+}
+
+.rate {
+    display: inline-block;
+    ;
+    border: 0;
+}
+
+.rate>label {
+    float: right;
+}
+
+
+/* Showing the stars */
+
+.rate>label:before {
+    display: inline-block;
+    font-size: 1.1rem;
+    font-family: FontAwesome;
+    content: "\f005";
+    margin: 0;
+    padding: 0.3rem .2rem;
+    cursor: pointer;
+}
+
+
+/* Half star */
+
+.rate .half:before {
+    content: "\f089";
     position: absolute;
-    bottom: 50%;
-    left: 38%;
-    display: none;
-    z-index: 1;
-    border-radius: 5px;
-    border: 1px solid #86C332;
+    padding-right: 0;
 }
 
-.btnHeader,
-.btnPfp {
-    background-color: #86C332;
-    color: #fff;
-    border-radius: 20px;
-    border: none;
-    padding: 5px 10px 10px 10px;
-    margin-top: 5px;
+
+/* Click and hover */
+
+input:checked~label,
+label:hover~label {
+    color: #ffb503;
+}
+
+
+/* hover hightlight */
+
+input:checked+label:hover,
+input:checked~label:hover,
+input:checked~label:hover~label,
+label:hover~input:checked~label {
+    color: #cc9000;
 }
